Removed dependency to unused bouncy castle library Updated readme

--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
 			<artifactId>bcprov-jdk15on</artifactId>
 			<version>1.50</version>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcmail-jdk15on</artifactId>
 			<version>1.50</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcpkix-jdk15on</artifactId>
