--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,20 @@
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<name>utils-security</name>
+
+	<build>
+		<plugins>
+                        <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-compiler-plugin</artifactId>
+                                <configuration>
+                                        <source>1.6</source>
+                                        <target>1.6</target>
+                                </configuration>
+                        </plugin>
+                </plugins>
+        </build>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
