--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
 			<artifactId>bcpkix-jdk15on</artifactId>
 			<version>1.70</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcutil-jdk15on -->
+		<dependency>
+		    <groupId>org.bouncycastle</groupId>
+		    <artifactId>bcutil-jdk15on</artifactId>
+		    <version>1.70</version>
+		</dependency>
+				
 		<dependency>
 			<groupId>be.nabu.utils</groupId>
 			<artifactId>utils-io</artifactId>
