Added pgp support

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 			<version>1.70</version>
 		</dependency>
 		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpg-jdk15on</artifactId>
+			<version>1.70</version>
+		</dependency>
+		<dependency>
 			<groupId>be.nabu.utils</groupId>
 			<artifactId>utils-io</artifactId>
 		</dependency>
